<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>crosslayer_motion</name>
  <version>0.1.0</version>
  <description>
    Phase 2 of the cross-layer demo: execute a cross-layer plan.json on the
    Gazebo Franka via pymoveit2, placing FindObstacle regions as collision boxes.
  </description>
  <maintainer email="ueeee327@gmail.com">ueeee327</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>pymoveit2</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
